--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nlbvita",
+  "name": "kzs",
   "version": "1.0.0",
-  "description": "NLB Vita API server",
+  "description": "KZS backend and database",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
